<resources>
    <string name="app_name">SOS Relief</string>
    <string name="earthquake">Earthquake</string>
    <string name="volcano">Volcano</string>
    <string name="flood">Flood</string>
    <string name="wildfire">Wildfire</string>
    <string name="visuals">Visuals</string>
    <string name="threats">Threats</string>
    <string name="data">Data</string>
    <string name="safety_measures">Safety Measures</string>
    <string name="near_the">Near the</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="during">During</string>
    <string name="expectations">Expectations</string>
    <string name="my_go_bag">My go bag</string>
    <string name="go_bag_name">Go bag name</string>
    <string name="no_go_bag_description">No go bag, use add button below to create a go bag</string>
    <string name="weight_of_selected_item">Weight of selected item</string>
    <string name="weight_of_go_bag">Weight of go bag</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="items">Items</string>
    <string name="item">Item</string>
    <string name="items_in_my_go_bag">Items in my go bag</string>
    <string name="go_bag">Go Bag</string>
    <string name="numbers_of_items">Numbers of items</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_of_go_bag">Confirm delete of go bag</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="basic_items">Basic items</string>
    <string name="coming_soon">Coming soon</string>
    <string name="basic_disaster_kit_1">Make sure your emergency kit is stocked with the items on the checklist below.
        Most of the items are inexpensive and easy to find, and any one of them could save your life.
        Once you take a look at the basic items,
        consider what unique needs your family might have, such as supplies for pets, or seniors.
        \n\n After an emergency, you may need to survive on your own for several days. Being prepared means having your own food,
        water and other supplies to last for at least 72 hours. A disaster supplies kit is a collection of basic items your
        household may need in the event of an emergency.</string>
    <string name="basic_disaster_supply_kit">Basic Disaster Supplies Kit</string>
    <string name="basic_disaster_kit_2">To assemble your kit, store items in airtight plastic bags and put your entire disaster
        supplies kit in one or two easy-to-carry containers such as plastic bins or a duffel bag.
        \n\n A basic emergency supply kit could include the following recommended items:</string>
    <string name="basic_disaster_kit_3">1.  Water one gallon of water per person per day for at least three days, for drinking and sanitation</string>
    <string name="basic_disaster_kit_4">2.  Food - at least a three-day supply of non-perishable food</string>
    <string name="basic_disaster_kit_5">3.  Battery-powered or hand crank radio and a NOAA Weather Radio with tone alert</string>
    <string name="basic_disaster_kit_6">4.  Flashlight</string>
    <string name="basic_disaster_kit_7">5.  First aid kit</string>
    <string name="basic_disaster_kit_8">6.  Extra batteries</string>
    <string name="basic_disaster_kit_9">7.  Whistle to signal for help</string>
    <string name="basic_disaster_kit_10">8.  Dust mask to help filter contaminated air and plastic sheeting and duct tape to shelter-in-place</string>
    <string name="basic_disaster_kit_11">9.  Moist towelettes, garbage bags and plastic ties for personal sanitation</string>
    <string name="basic_disaster_kit_12">10.  Wrench or pliers to turn off utilities</string>
    <string name="basic_disaster_kit_13">11.  Manual can opener for food</string>
    <string name="basic_disaster_kit_14">12.  Local maps</string>
    <string name="basic_disaster_kit_15">13.  Cell phone with chargers and a backup battery</string>
    <string name="maintaining_your_Kit">Maintaining Your Kit</string>
    <string name="kit_maintenance">Kit maintenance</string>
    <string name="maintaining_your_kit_1">After assembling your kit remember to maintain it so it’s ready when needed:</string>
    <string name="maintaining_your_kit_2">1.  Keep canned food in a cool, dry place</string>
    <string name="maintaining_your_kit_3">2.  Store boxed food in tightly closed plastic or metal containers</string>
    <string name="maintaining_your_kit_4">3.  Replace expired items as needed</string>
    <string name="maintaining_your_kit_5">4.  Re-think your needs every year and update your kit as your family’s needs change.</string>
    <string name="kit_storage_location">Kit Storage Locations</string>
    <string name="kit_storage_location_1">Since you do not know where you will be when an emergency occurs, prepare supplies for home, work and vehicles.</string>
    <string name="kit_storage_location_2">Home: \nKeep this kit in a designated place and have it ready in case you have to leave your home quickly. Make sure all family members know where the kit is kept.</string>
    <string name="kit_storage_location_3">Work: \nBe prepared to shelter at work for at least 24 hours. Your work kit should include food, water and other necessities like medicines, as well as comfortable walking shoes, stored in a “grab and go” case.</string>
    <string name="kit_storage_location_4">Vehicle: \nIn case you are stranded, keep a kit of emergency supplies in your car.</string>
    <string name="what_to_expect_during_earthquake">What to expect during an earthquake</string>
    <string name="small_or_medium_quakes">Small or moderate earthquakes</string>
    <string name="small_quakes_1">1.  These can last only a few seconds and represent no emergency risk.</string>
    <string name="small_quakes_2">2.  Ceiling lights may move and some minor rattling of objects may occur in your home.</string>
    <string name="small_quakes_3">3.  You may feel a slight quiver under your feet if you are outside.</string>
    <string name="small_quakes_4">4.  If you are close to its source, you may hear a loud bang followed by shaking.</string>
    <string name="large_quakes">Large earthquakes</string>
    <string name="large_quakes_1">1.  These can last up to several minutes and constitute a natural disaster if its epicentre is near a densely populated area, or its magnitude sufficiently large for the region.</string>
    <string name="large_quakes_2">2.  The ground or floor will move, perhaps violently.</string>
    <string name="large_quakes_3">3.  Whether far away or close to the source, you will probably feel shaking followed by a rolling motion, much like being at sea.</string>
    <string name="large_quakes_4">4.  If you are far away from the source, you might see swaying buildings or hear a roaring sound.</string>
    <string name="large_quakes_5">5.  You may feel dizzy and be unable to walk during the earthquake.</string>
    <string name="large_quakes_6">6.  If you live in a high rise or a multi-storey building, you may experience more sway and less shaking than in a smaller, single-storey building. Lower floors will shake rapidly, much like residential homes. On upper floors, movement will be slower but the building will move farther from side to side.</string>
    <string name="large_quakes_7">7.  Furnishings and unsecured objects could fall over or slide across the floor or be thrown with damaging force across the room.</string>
    <string name="large_quakes_8">8.  Unsecured light fixtures and ceiling panels may fall.</string>
    <string name="large_quakes_9">9.  Windows may break.</string>
    <string name="large_quakes_10">10.  Fire alarms and sprinkler systems may be activated.</string>
    <string name="large_quakes_11">11.  Lights and power may go off.</string>
    <string name="before_an_earthquake">Before an Earthquake</string>
    <string name="before_an_earthquake_description">Go through your home, imagining what could happen to each part of it, if shaken by a violent earthquake. Check off the items that you have completed in this list.</string>
    <string name="before_an_earthquake_1">1.  Teach everybody in the family (if they are old enough) how to turn off the water and electricity.</string>
    <string name="before_an_earthquake_2">2.  Clearly label the on-off positions for the water, electricity and gas.</string>
    <string name="before_an_earthquake_3">3.  Repair loose roof shingles.</string>
    <string name="if_indoors_during_earthquake">If you are indoors during an earthquake</string>
    <string name="ensure_you_do_the_following">Ensure you do the following</string>
    <string name="earthquake_safety_measures_1">1.  DROP to the ground; take COVER by getting under a sturdy table or other
        piece of furniture; and HOLD ON until the shaking stops. If there isn’t a table or desk near you, cover your face
        and head with your arms and crouch in an inside corner of the building.</string>
    <string name="earthquake_safety_measures_2">2.  Stay away from glass, windows, outside doors and walls, and anything that
        could fall, such as lighting fixtures or furniture.</string>
    <string name="earthquake_safety_measures_3">3.  Stay in bed if you are there when the earthquake strikes. Hold on and protect your head with a pillow, unless you are under a heavy light fixture that could fall. In that case, move to the nearest safe place.</string>
    <string name="earthquake_safety_measures_4">4.  Do not use a doorway except if you know it is a strongly supported, load-bearing doorway and it is close to you. Many inside doorways are lightly constructed and do not offer protection.</string>
    <string name="earthquake_safety_measures_5">5.  Stay inside until the shaking stops and it is safe to go outside. Do not exit a building during the shaking. Research has shown that most injuries occur when people inside buildings attempt to move to a different location inside the building or try to leave.</string>
    <string name="earthquake_safety_measures_6">6.  DO NOT use the elevators.</string>
    <string name="earthquake_safety_measures_7">7.  Be aware that the electricity may go out or the sprinkler systems or fire alarms may turn on.</string>
    <string name="if_your_outdoors_during_earthquake">If you are outdoors during an earthquake</string>
    <string name="earthquake_safety_measures_outdoors_1">1.  Stay there.</string>
    <string name="earthquake_safety_measures_outdoors_2">2.  Move away from buildings, streetlights, and utility wires.</string>
    <string name="if_in_moving_vehicle">If you are in a moving vehicle during an earthquake</string>
    <string name="earthquake_safety_measures_in_moving_vehicle_1">1.  Stop as quickly as safety permits and stay in the vehicle. Avoid stopping near or under buildings, trees, overpasses, and utility wires.</string>
    <string name="earthquake_safety_measures_in_moving_vehicle_2">2.  Proceed cautiously once the earthquake has stopped. Avoid roads, bridges, or ramps that might have been damaged by the earthquake.</string>
    <string name="if_trapped_under_debris">If you are trapped under debris</string>
    <string name="earthquake_safety_measures_under_debris_1">1.  Do not light a match.</string>
    <string name="earthquake_safety_measures_under_debris_2">2.  Do not move around or kick up dust.</string>
    <string name="earthquake_safety_measures_under_debris_3">3.  Cover your mouth with a handkerchief or clothing.</string>
    <string name="earthquake_safety_measures_under_debris_4">4.  Tap on a pipe or wall so rescuers can locate you. Use a whistle if one is available. Shout only as a last resort. Shouting can cause you to inhale dangerous amounts of dust.</string>
</resources>