<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.gobag.BasicSupplyKitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_1"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_supply_kit"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/dim_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_2"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_3"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_4"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_5"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_6"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_7"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_8"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_9"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_10"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_11"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_12"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_13"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_14"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_disaster_kit_15"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
    </LinearLayout>


</ScrollView>