<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.gobag.MaintainingYourKitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_your_Kit"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/dim_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_your_kit_1"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_your_kit_2"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_your_kit_3"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_your_kit_4"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintaining_your_kit_5"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_storage_location"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:padding="@dimen/dim_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_storage_location_1"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_storage_location_2"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_storage_location_3"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_storage_location_4"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
    </LinearLayout>
</ScrollView>