<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.earthquake.EarthquakePreparationFragment"
    android:padding="@dimen/dim_medium"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ensure_you_do_the_following"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_indoors_during_earthquake"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_1"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_2"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_3"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_4"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_5"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_6"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_7"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_your_outdoors_during_earthquake"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_outdoors_1"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_outdoors_2"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/if_in_moving_vehicle"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_in_moving_vehicle_1"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_in_moving_vehicle_2"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/if_trapped_under_debris"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_under_debris_1"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_under_debris_2"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_under_debris_3"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_x_large"
        android:layout_marginLeft="@dimen/dim_x_large"
        android:text="@string/earthquake_safety_measures_under_debris_4"
        android:padding="@dimen/dim_medium"
        android:textColor="@color/primaryTextColor"/>

    </LinearLayout>

</ScrollView>