<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.earthquake.EarthquakeExpectationsFragment"
    android:padding="@dimen/dim_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_or_medium_quakes"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/small_quakes_1"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/small_quakes_2"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/small_quakes_3"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/small_quakes_4"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_quakes"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_1"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_2"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_3"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_4"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_5"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_6"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_7"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_8"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_9"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_10"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_x_large"
            android:layout_marginLeft="@dimen/dim_x_large"
            android:text="@string/large_quakes_11"
            android:padding="@dimen/dim_medium"
            android:textColor="@color/primaryTextColor"/>
    </LinearLayout>

</ScrollView>